# http_server

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  run.sh  test_client.sh
include/: common.h  config.h  file_storage.h  http_communication.h  http_header.h  http_messages.h  logger.h  server.h  utils.h
src/: config.c  file_storage.c  http_communication.c  http_header.c  logger.c  main.c  server.c  utils.c
tests/: run_tests.sh  test_config.py  test_file_storage.py  test_http_communication.py  test_logger.py  test_server.py
